2009.01.06

* Removed the redundant server module.
* Cleaned up service.tac.
* Updated admin defs.sh.
* Added placeholder setup.py.
* Moved Dspam code into util module.

2009.01.06

* Added initial admin directory and scripts.
* Added code for mail server that dates to approximately July of 2006.
* Added lib dir.
* Moved library code into new lib dir.
* Tweaked service.tac.
* Added TODO.

2006.07

* Lots more changes and updates.

2006.05

* Started initial work on mail server code. Abe Fetig's examples in the Twisted
book served as a starter and then I dug more deeply into the Twisted source
code to get the rest.