@@ -1,3 +1,1 @@
-* Clean up txmailserver/smtp.py.
-* Address XXXs in txmailserver/mailservice.py.
 * Replace print statements with log calls.
